static/css/styles.css
html{
  position: relative;
}

body {
  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

/*CSS for footer alignment on pages*/
footer {
  display: flex;
  flex-flow: column wrap;
  position: absolute;
  bottom: 0;
  width: 100%;
}


 /* PAGE SPECIFIC CSS*/
/*CSS for image on index.html*/
.index_img {
  position: relative;
  max-width: max-content; /* Maximum width */
  margin: 0 auto; /* Center it */
}

.index_img .content {
  position: absolute; /* Position the background text */
  top: 0; /* At the bottom. Use top:0 to append it to the top */
  background: rgb(0, 0, 0); /* Fallback color */
  background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
  color: #f1f1f1; /* Grey text */
  padding-top:60px;
  padding-bottom: 300px;
  padding-inline: 400px; /* Some padding */
}


/*CSS for image on homepage.html*/
.homepage_img {
  background-image: url("/static/img/hops\ with\ tasters\ Photo\ by\ Missy\ Fant\ on\ Unsplash.jpg");
  background-color: rgb(216, 238, 173);
  height: fit-content;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position:relative;
}

.homepage_text {
  color:#f1f1f1;
}

/*CSS for image border color on homepage.html*/
.border_taco {
  border-color: #a13d2d !important;
}


/*CSS for image on brewery_trip_planner.html*/
.planner_img {
  background-image: url("/static/img/Stacks\ of\ Kegs\ by\ Pea\ 2_1.jpg");
  background-color: rgb(216, 238, 173);
  height: fit-content;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position:relative;
}

.planner_text {
  color:gold;
}


/*CSS for image on brewery_search_results.html*/
.brewery_results_img {
  background-image: url("/static/img/hops\ Photo\ by\ Markus\ Spiske\ on\ Unsplash.jpg");
  background-color: rgb(216, 238, 173);
  height: fit-content;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position:relative;
}

.brewery_results_text {
  color:gold;
}


/*CSS for image on taco_search_results.html*/
.taco_results_img {
  background-image: url("/static/img/three\ tacos\ on\ side\ by\ tai-s-captures-unsplash\ option\ b.jpg");
  background-color: rgb(216, 238, 173);
  height: fit-content;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position:relative;
}

.taco_results_text {
  color:#A13D2D;
}


/*CSS for image on user_profile.html*/
.user_profile_img {
  background-image: url("/static/img/a\ beer\ by\ tamas-pap-unsplash.jpg");
  background-color: rgb(37, 37, 36);
  height: fit-content;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position:relative;
}

.user_profile_text {
  color:#f1f1f1;
}


/*CSS for iamge on goodbye.html*/
.goodbye_img {
  position: relative;
  max-width: max-content; /* Maximum width */
  margin: 0 auto; /* Center it */
}

.goodbye_img .content {
  position: absolute; /* Position the background text */
  top: 0; /* At the bottom. Use top:0 to append it to the top */
  bottom:0;
  

  background: rgb(0, 0, 0); /* Fallback color */
  background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
  color: #f1f1f1; /* Grey text */
  padding-top:160px;
  padding-bottom: 170px;
  padding-inline: 400px; /* Some padding */
}

